# SandpileModel

./: CMakeLists.txt  README.md
include/: bmp.h  sandpile.h
inputExamples/: sandpile300K.tsv  sandpileFive10K.tsv
src/: bmp.cpp  main.cpp  sandpile.cpp
